force-app/main/default/objects/Quote__c/fields/Account_Contact_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_Email__c</fullName>
    <formula>Opportunity__r.Account.Account_Contact_Person_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Person Email</label>
    <type>Text</type>
</CustomField>