force-app/main/default/objects/Quote__c/fields/Account_Contact_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Person_Name__c</fullName>
    <formula>Opportunity__r.Account.Contact_Person__r.FirstName &amp; &apos; &apos; &amp; Opportunity__r.Account.Contact_Person__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact Person Name</label>
    <type>Text</type>
</CustomField>