force-app/main/default/objects/Quote__c/fields/Account_FEIN__c.field-meta.xml
<CustomField>
    <fullName>Account_FEIN__c</fullName>
    <formula>Opportunity__r.Account.FEIN_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account FEIN</label>
    <type>Text</type>
</CustomField>