force-app/main/default/objects/Quote__c/fields/Account_Location_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Location_Country__c</fullName>
    <formula>Opportunity__r.Account.ShippingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Location Country</label>
    <type>Text</type>
</CustomField>