force-app/main/default/objects/Quote__c/fields/Account_Location_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Location_State__c</fullName>
    <formula>Opportunity__r.Account.ShippingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Location State</label>
    <type>Text</type>
</CustomField>