force-app/main/default/objects/Quote__c/fields/Account_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Account_Mailing_City__c</fullName>
    <formula>Opportunity__r.Account.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Mailing City</label>
    <type>Text</type>
</CustomField>