force-app/main/default/objects/Quote__c/fields/Account_Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Mailing_Country__c</fullName>
    <formula>Opportunity__r.Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Mailing Country</label>
    <type>Text</type>
</CustomField>