force-app/main/default/objects/Quote__c/fields/Account_Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Mailing_Postal_Code__c</fullName>
    <formula>Opportunity__r.Account.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Mailing Postal Code</label>
    <type>Text</type>
</CustomField>