force-app/main/default/objects/Quote__c/fields/Account_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Account_Mailing_State__c</fullName>
    <formula>Opportunity__r.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Mailing State</label>
    <type>Text</type>
</CustomField>