force-app/main/default/objects/Quote__c/fields/Account_Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Account_Mailing_Street__c</fullName>
    <formula>Opportunity__r.Account.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Mailing Street</label>
    <type>Text</type>
</CustomField>