force-app/main/default/objects/Quote__c/fields/AdditionalInformationIds__c.field-meta.xml
<CustomField>
    <fullName>AdditionalInformationIds__c</fullName>
    <description>Comma-separated list of the selected NQ Template IDs for this Quote.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comma-separated list of the selected NQ Template IDs for this Quote.</inlineHelpText>
    <label>Additional Information Ids</label>
    <type>TextArea</type>
</CustomField>