force-app/main/default/objects/Quote__c/fields/Aggregate_Limit__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit__c</fullName>
    <description>Populated by the DynamicQuoteController</description>
    <inlineHelpText>These are summary fields. If shared, max agg &amp; max occ. If sep, min occ &amp; total agg.</inlineHelpText>
    <label>Aggregate Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>