force-app/main/default/objects/Quote__c/fields/Aggregate_Limit_Roll__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit_Roll__c</fullName>
    <label>Aggregate Limits</label>
    <summarizedField>Quote_Coverage_Link__c.Aggregate__c</summarizedField>
    <summaryForeignKey>Quote_Coverage_Link__c.Quote__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>