force-app/main/default/objects/Quote__c/fields/Aggregate_Limit_Scale__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Limit_Scale__c</fullName>
    <label>Aggregate Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>