force-app/main/default/objects/Quote__c/fields/APEX_Brand__c.field-meta.xml
<CustomField>
    <fullName>APEX_Brand__c</fullName>
    <formula>IF(Opportunity_RecordType_Name__c = &apos;Founder Shield&apos;, &apos;foundershield&apos;,
IF(Opportunity_RecordType_Name__c = &apos;BRP&apos;, &apos;foundershield&apos;,
IF(Opportunity_RecordType_Name__c = &apos;Alpharoot&apos;, &apos;alpharoot&apos;,
null)))</formula>
    <label>APEX Brand</label>
    <type>Text</type>
</CustomField>