force-app/main/default/objects/Quote__c/fields/API_Quote_Source__c.field-meta.xml
<CustomField>
    <fullName>API_Quote_Source__c</fullName>
    <label>API Quote Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Hartford</fullName>
            </value>
            <value>
                <fullName>Apollo</fullName>
            </value>
            <value>
                <fullName>HeraldAPI</fullName>
            </value>
            <value>
                <fullName>Coalition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>