force-app/main/default/objects/Quote__c/fields/Auditable__c.field-meta.xml
<CustomField>
    <fullName>Auditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auditable</label>
    <type>Checkbox</type>
</CustomField>