force-app/main/default/objects/Quote__c/fields/Auditor_Adj__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Adj__c</fullName>
    <formula>( Auditor_Factor__c * D_O_Base_Rate__c ) - D_O_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auditor (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>