force-app/main/default/objects/Quote__c/fields/Auditor_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Adj_New__c</fullName>
    <label>Auditor (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>