force-app/main/default/objects/Quote__c/fields/Auditor_Factor__c.field-meta.xml
<CustomField>
    <fullName>Auditor_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Audited financials with unqualified opinion:	.90 - 1.0
B. CPA review, no auditor attestation:	1.0
C. No CPA review (e.g. pro forma or Quickbooks financials) or qualified auditor opinion:	1.1 - 1.3</inlineHelpText>
    <label>Auditor (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>