force-app/main/default/objects/Quote__c/fields/Auto_Quoting_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Auto_Quoting_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is true, it indicates that this quote was automatically created by BatchAutoEligibleQuote.</description>
    <inlineHelpText>If this is true, it indicates that this quote was automatically created by BatchAutoEligibleQuote.</inlineHelpText>
    <label>Auto Quoting Eligible</label>
    <type>Checkbox</type>
</CustomField>