force-app/main/default/objects/Quote__c/fields/Autocalc_Taxes_And_Fees__c.field-meta.xml
<CustomField>
    <fullName>Autocalc_Taxes_And_Fees__c</fullName>
    <defaultValue>true</defaultValue>
    <label>AutoCalc Taxes &amp; Fees</label>
    <type>Checkbox</type>
</CustomField>