force-app/main/default/objects/Quote__c/fields/Bank_Credit_Compliance_Adj__c.field-meta.xml
<CustomField>
    <fullName>Bank_Credit_Compliance_Adj__c</fullName>
    <formula>( Bank_Credit_Compliance_Factor__c * D_O_Base_Rate__c) - D_O_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bank Credit Compliance (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>