force-app/main/default/objects/Quote__c/fields/Bank_Credit_Compliance_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Bank_Credit_Compliance_Adj_New__c</fullName>
    <label>Bank Credit Compliance (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>