force-app/main/default/objects/Quote__c/fields/Bank_Credit_Compliance_Factor__c.field-meta.xml
<CustomField>
    <fullName>Bank_Credit_Compliance_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Above Average:	.90
B. Average:	1.0
C. Below Average: 	1.1 - 2.0</inlineHelpText>
    <label>Bank Credit Compliance (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>