force-app/main/default/objects/Quote__c/fields/Benefit_Reduc_Plan_Termin_Adj__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Reduc_Plan_Termin_Adj__c</fullName>
    <formula>( Benefit_Reduc_Plan_Termin_Factor__c * FID_Base_Rate__c ) -  FID_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benefit Reduc. / Plan Termin. (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>