force-app/main/default/objects/Quote__c/fields/Benefit_Reduc_Plan_Termin_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Reduc_Plan_Termin_Adj_New__c</fullName>
    <label>Benefit Reduc. / Plan Termin. (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>