force-app/main/default/objects/Quote__c/fields/Benefit_Reduc_Plan_Termin_Factor__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Reduc_Plan_Termin_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. No benefit reductions or plan terminations in last 5 years: .90 - 1.0
B. Reductions, plan terminations, or freezes have occurred in the last 5 years: 1.2 - 2.0</inlineHelpText>
    <label>Benefit Reduc. / Plan Termin. (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>