force-app/main/default/objects/Quote__c/fields/Blanket_AI__c.field-meta.xml
<CustomField>
    <fullName>Blanket_AI__c</fullName>
    <label>Policy AI Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blanket where required by contract</fullName>
            </value>
            <value>
                <fullName>Designated person</fullName>
            </value>
            <value>
                <fullName>Designated person - Products/completed ops</fullName>
            </value>
            <value>
                <fullName>Mortgagee, Assignee or Receiver</fullName>
            </value>
            <value>
                <fullName>Owner/lesser of premises</fullName>
            </value>
            <value>
                <fullName>Owner/lessor of premises - Products/completed ops</fullName>
            </value>
            <value>
                <fullName>State or Governmental agency</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>