force-app/main/default/objects/Quote__c/fields/Cancel_Terms__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Terms__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Cancel Terms</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>