force-app/main/default/objects/Quote__c/fields/Cap_Table_Composition_Adj__c.field-meta.xml
<CustomField>
    <fullName>Cap_Table_Composition_Adj__c</fullName>
    <formula>( Cap_Table_Composition_Factor__c * D_O_Base_Rate__c ) - D_O_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cap Table Composition (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>