force-app/main/default/objects/Quote__c/fields/Cap_Table_Composition_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Cap_Table_Composition_Adj_New__c</fullName>
    <label>Cap Table Composition (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>