force-app/main/default/objects/Quote__c/fields/Cap_Table_Composition_Factor__c.field-meta.xml
<CustomField>
    <fullName>Cap_Table_Composition_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Mgmt owns all the shares:  .85 - .90
B. Mgmt owns majority of shares:  .90 - 1.1
C. Mgmt and/or institutional investors with board representation own majority of shares:  1.1 - 1.2
D. Non-affiliated individuals and/or institutional investor</inlineHelpText>
    <label>Cap Table Composition (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>