force-app/main/default/objects/Quote__c/fields/Carrier_Issuing_Company__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Issuing_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Carrier Issuing Company</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <errorMessage>Account must be an Issuing Company or Carrier</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Issuing Company</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Scale Issuing Company</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Carrier</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>