force-app/main/default/objects/Quote__c/fields/Class_of_Business_Adj__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Business_Adj__c</fullName>
    <formula>( Class_of_Business_Factor__c *  D_O_Base_Rate__c ) - D_O_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class of Business (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>