force-app/main/default/objects/Quote__c/fields/Class_of_Business_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Business_Adj_New__c</fullName>
    <label>Class of Business (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>