force-app/main/default/objects/Quote__c/fields/Class_of_Business_Factor__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Business_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Low risk:	.90 - 1.0
B. Average risk:	1.0 - 1.3
C. High risk:	1.3 - 2.0</inlineHelpText>
    <label>Class of Business (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>