force-app/main/default/objects/Quote__c/fields/CNA_Hardford_Account__c.field-meta.xml
<CustomField>
    <fullName>CNA_Hardford_Account__c</fullName>
    <formula>Marketer_UW_Name__r.Account.CNA_Hardford_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is CNA/Hardford Account</label>
    <type>Checkbox</type>
</CustomField>