force-app/main/default/objects/Quote__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <inlineHelpText>Commission rate provided on the quote or via our standard commission schedule: http://bit.ly/2oyYLOd</inlineHelpText>
    <label>Commission Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>