force-app/main/default/objects/Quote__c/fields/Company_Performance_Adj__c.field-meta.xml
<CustomField>
    <fullName>Company_Performance_Adj__c</fullName>
    <formula>( Company_Performance_Factor__c *  FID_Base_Rate__c ) -  FID_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Performance (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>