force-app/main/default/objects/Quote__c/fields/Company_Performance_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Company_Performance_Adj_New__c</fullName>
    <label>Company Performance (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>