force-app/main/default/objects/Quote__c/fields/Company_Performance_Factor__c.field-meta.xml
<CustomField>
    <fullName>Company_Performance_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. Strong balance sheet, profitable, stong management team: .90 - 1.0
B. Equity ratios below average, slightly unprofitable, qualified management: 1.0 - 1.2
C. Weak balance sheet, deeply unprofitable, inexperienced management: 1.2 - 1.5</inlineHelpText>
    <label>Company Performance (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>