force-app/main/default/objects/Quote__c/fields/Corporate_Gov_Board_Comp_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Gov_Board_Comp_Adj_New__c</fullName>
    <label>Corporate Gov. &amp; Board Comp. (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>