force-app/main/default/objects/Quote__c/fields/Coverages__c.field-meta.xml
<CustomField>
    <fullName>Coverages__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coverages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>