force-app/main/default/objects/Quote__c/fields/Creator_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Creator_Profile_Name__c</fullName>
    <formula>CreatedBy.Profile.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Creator Profile Name</label>
    <type>Text</type>
</CustomField>