force-app/main/default/objects/Quote__c/fields/Current_Ratio_Adj__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio_Adj__c</fullName>
    <formula>( Current_Ratio_Factor__c * D_O_Base_Rate__c ) - D_O_Base_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Ratio (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>