force-app/main/default/objects/Quote__c/fields/Current_Ratio_Adj_New__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio_Adj_New__c</fullName>
    <label>Current Ratio (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>