force-app/main/default/objects/Quote__c/fields/Current_Ratio_Factor__c.field-meta.xml
<CustomField>
    <fullName>Current_Ratio_Factor__c</fullName>
    <defaultValue>1.00</defaultValue>
    <inlineHelpText>A. 7 or greater, profitable:	.90
B. 3 - 7:	.90 - 1.0
C. 1 - 3:	1.0 - 1.2
D. Below 1:	1.2 - 1.75</inlineHelpText>
    <label>Balance Sheet Strength (Factor)</label>
    <precision>6</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>