force-app/main/default/objects/Quote__c/fields/D_O_Base_Rate__c.field-meta.xml
<CustomField>
    <fullName>D_O_Base_Rate__c</fullName>
    <formula>IF( Opportunity__r.Total_Assets__c &lt;= 5000000, 3025,
IF( AND( Opportunity__r.Total_Assets__c &gt; 5000000, Opportunity__r.Total_Assets__c &lt;= 10000000), 3782 ,
IF( AND( Opportunity__r.Total_Assets__c &gt; 10000000, Opportunity__r.Total_Assets__c &lt;= 25000000), 4538,
IF ( AND ( Opportunity__r.Total_Assets__c &gt; 25000000, Opportunity__r.Total_Assets__c &lt;= 100000000), 6807,
IF ( AND ( Opportunity__r.Total_Assets__c &gt; 100000000, Opportunity__r.Total_Assets__c &lt;= 250000000), 11344,
IF ( Opportunity__r.Total_Assets__c &gt; 250000000, (13750 + (((Opportunity__r.Total_Assets__c-250000000) / 20000000)*1000)), 0
))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>$0 - $5,000,000:	$3,025
$5,000,001 - $10,000,000:	$3,782
$10,000,001 - $25,000,000:	$4,538
$25,000,001 - $100,000,000: 	$6,807
$100,000,001 - $250,000,000:	$11,344
$250,000,001+$13,750 + $1,000 for every $20,000,000 in assets above $250,000,000</inlineHelpText>
    <label>D&amp;O Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>