force-app/main/default/objects/Quote__c/fields/D_O_Base_Rate_New__c.field-meta.xml
<CustomField>
    <fullName>D_O_Base_Rate_New__c</fullName>
    <label>D&amp;O Base Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>