force-app/main/default/objects/Quote__c/fields/D_O_Employment_Practice_Fiduciary__c.field-meta.xml
<CustomField>
    <fullName>D_O_Employment_Practice_Fiduciary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>D&amp;O Employment Practice Fiduciary</label>
    <type>Checkbox</type>
</CustomField>