force-app/main/default/objects/Quote__c/fields/D_O_Limit_Modifier_Limit__c.field-meta.xml
<CustomField>
    <fullName>D_O_Limit_Modifier_Limit__c</fullName>
    <defaultValue>&quot;$1,000,000&quot;</defaultValue>
    <inlineHelpText>$500,000:	0.85
$1,000,000:	1.00
$2,000,000:	1.70
$3,000,000:	2.15
$4,000,000:	2.60
$5,000,000:	3.00</inlineHelpText>
    <label>D&amp;O Limit Modifier (Limit)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>$500,000</fullName>
            </value>
            <value>
                <fullName>$1,000,000</fullName>
                <default>true</default>
                <label>$1,000,000</label>
            </value>
            <value>
                <fullName>$2,000,000</fullName>
            </value>
            <value>
                <fullName>$3,000,000</fullName>
            </value>
            <value>
                <fullName>$4,000,000</fullName>
            </value>
            <value>
                <fullName>$5,000,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>