force-app/main/default/objects/Quote__c/fields/D_O_Limit_Modifier_Limit_Val__c.field-meta.xml
<CustomField>
    <fullName>D_O_Limit_Modifier_Limit_Val__c</fullName>
    <formula>CASE(TEXT(D_O_Limit_Modifier_Limit__c),&quot;$500,000&quot;, 500000, &quot;$1,000,000&quot;, 1000000, &quot;$2,000,000&quot;, 2000000, &quot;$2,500,000&quot;, 2500000, &quot;$3,000,000&quot;, 3000000, &quot;$4,000,000&quot;, 4000000, &quot;$5,000,000&quot;, 5000000, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D&amp;O Limit Modifier (Limit) Val</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>