force-app/main/default/objects/Quote__c/fields/D_O_Retention_Adjusted_Rate__c.field-meta.xml
<CustomField>
    <fullName>D_O_Retention_Adjusted_Rate__c</fullName>
    <label>D&amp;O Retention Adjusted Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>