force-app/main/default/objects/Quote__c/fields/D_O_Retention_Modifier_Adj__c.field-meta.xml
<CustomField>
    <fullName>D_O_Retention_Modifier_Adj__c</fullName>
    <formula>(D_O_Limit_Adjusted_Rate__c *

IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$5,000&quot;) , 1.250,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$7,500&quot;) , 1.20,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$10,000&quot;) , 1.150,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$15,000&quot;) , 1.100,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$20,000&quot;) , 1.050,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$25,000&quot;) , 1.000,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$35,000&quot;) , 0.950,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$50,000&quot;) , 0.925,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$75,000&quot;) , 0.885,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$100,000&quot;) , 0.835,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$150,000&quot;) , 0.815,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$200,000&quot;) , 0.795,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$250,000&quot;) , 0.775,
IF( ISPICKVAL( D_O_Retention_Modifier_Retention__c , &quot;$500,000&quot;) , 0.700, 0 )))))))))))))))


- D_O_Limit_Adjusted_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>D&amp;O Retention Modifier (Adj)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>